2003-07-07  David Malcolm <david@davemalcolm.demon.co.uk>

	* Makefile.am, cong-overview-view.c, cong-overview-view.h, cong-tree-view.h, cong-node.h, cong-primary-window.c, cong-tree-view.c, global.h

	New files; big rewrite of the overview tree view.
	
	* cong-document.c, cong-document.h, cong-source-view.c, cong-view.h, plugin-cleanup-source.c

	Amortisation of view updates; generalised document node traversal; utility for merging adjacent text nodes

	* Makefile.am, cong-dtd.c, cong-dtd.h, cong-dispspec.c, cong-dispspec.h, cong-eel.c

	New files; refactoring of the dispspec generation code.

	* plugin-dtd.c

	Removed extraneous error dialog.
	
	* cong-dispspec.c, cong-eel.c, cong-eel.h

	Improvements to DTD->Dispspec conversion

2003-07-06  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-dispspec.c, plugin-dtd.c

	Work on dispspec generation from DTDs

	* cong-dispspec.c, cong-dispspec.h, cong-file-open.c, cong-plugin.c, plugin-dtd.c

	Big cleanup of the dispspec code

2003-07-04  David Malcolm <david@davemalcolm.demon.co.uk>

	* plugin_fo.c

	New file

	* Makefile.am, main.c, 

	Added plugin-fo.c

	* cong-file-export.c, cong-file-print.c, cong-plugin.c, cong-plugin.h, global.h, plugin-convert-case.c

	Only show the exporters and print methods that are relevant to the current document; port to v2.2 of the GNOME Print API (GnomePrintJob replacesGnmePrintMaster); pass document rather than FPI to the filter methods; disabled the case conversion plugin.
	
	* cong-app.h

	New file

	* cong-dispspec-registry.[ch], cong-dispspec.c, cong-file-export.c, cong-file-import.c, cong-file-new.c, cong-file-open.c, cong-menus.c, cong-node-properties-dialog.c, cong-plugin.c, cong-primary-window.c, cong-span-text-editor.c, cong-tree-view.c, global.h, main.c, plugin-docbook.c, popup.c, tree.c, xmledit.c

	Converted struct CongGlobals the_globals into struct CongApp the_app and moved into new header file

2003-07-03 Jeff Martin <jeff@custommonkey.org>

	* cong-menus.c
