@@ -1,5 +1,9 @@
 2003-07-07  David Malcolm <david@davemalcolm.demon.co.uk>
 
+	* cong-dom-view.c, cong-overview-view.c, cong-tree-view.c, cong-tree-view.h
+
+	Rewrite of cong-dom-view.c to use the cong-tree-view.c code.
+
 	* Makefile.am, cong-overview-view.c, cong-overview-view.h, cong-tree-view.h, cong-node.h, cong-primary-window.c, cong-tree-view.c, global.h
 
 	New files; big rewrite of the overview tree view.
